--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/sandifb/ex4mple-4pp.git"
   },
-  "version": "0.1.4",
+  "version": "0.1.7",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -58,6 +58,9 @@
     "react-scripts": "4.0.3",
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12"
+    "@babel/preset-env": "^7.13.12",
+    "@mui/material": "^5.8.7",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3"
   }
 }
