--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "type": "git",
     "url": "git+https://github.com/sandifb/ex4mple-4pp.git"
   },
-  "version": "0.1.7",
+  "version": "0.1.11",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "node-sass": "^5.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "chart.js": "^3.9.1",
+    "react-chartjs-2": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,14 +55,14 @@
     ]
   },
   "devDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
-    "@mui/material": "^5.8.7",
     "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3"
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   }
 }
